--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -85,7 +85,8 @@
 
 .promo__list li {
   width: 100%;
-  border: 7px solid transparent;
+  border-style: solid;
+  border-width: 7px;
   border-image: linear-gradient(to bottom right, #d10a42, #00359f);
   border-image-slice: 1;
   padding: 25px 28px 28px;
