--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -168,6 +168,11 @@
     width: calc(50% - 15px);
     margin-right: 30px;
     margin-bottom: 30px;
+    padding-top: 44%;
+  }
+
+  .coaches__name {
+    margin: 0 0 20px 5px;
   }
 
   .coaches__name-hover {
@@ -176,6 +181,15 @@
 
   .coaches__info p {
     margin: 0 0 33px -8px;
+  }
+
+  .coaches__info {
+    min-height: 100%;
+  }
+
+  .coaches__arrow-left,
+  .coaches__arrow-right {
+    top: 40.3%;
   }
 
   .coaches__item:nth-child(2n) {
@@ -198,10 +212,10 @@
     width: 100%;
     min-height: 274px;
     margin-right: 0;
+    padding-top: 100%;
   }
 
   .coaches__info {
-    min-height: 274px;
     padding: 45px 15px 10px;
   }
 
@@ -225,11 +239,11 @@
 
   .coaches__arrow-left {
     left: -32px;
-    top: 128px;
+    top: 42%;
   }
 
   .coaches__arrow-right {
     right: -32px;
-    top: 128px;
+    top: 42%;
   }
 }
